--- a/version Javascript/index.html
+++ b/version Javascript/index.html
@@ -1,43 +1,102 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Gestionnaire de contacts</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/script.js"></script>
-  </head>
+   <head>
+      <meta charset="utf-8">
+      <title>Gestionnaire de contacts</title>
+      <link rel="stylesheet" href="assets/css/style.css">
+   </head>
 
-    <body>
+   <body>
 
       <div class="conteneur">
 
-        <div class="enTete">
-          <h1>Gestionnaire de contacts</h1>
-          <img src="assets/img/avatar.png" alt="avatar" />
-        </div>
+<!--================   3 morceaux  ==============-->
 
-        <div class="menuDeroulant">
+   <!--=================  le 1er  ============-->  
 
-          <div id="choix">
+
+         <div class="enTete">
+            <h1>Gestionnaire de contacts</h1>
+            <img src="assets/img/avatar.png" alt="avatar" />
+         </div>
+
+
+   <!--=================  le 2e  =============-->
+
+
+         <div id="choix">
+
+            <select id="choix_options" name="choix_options">
+
+               <option value="0">Que voulez-vous faire ?</option>
+
+               <option value="1">Lister les concacts</option>
+
+               <option value="2">Ajouter un contact</option>
+
+               <option>Nombre de contacts</option>
+
+            </select>
+
+         </div>
+
+
+   <!--=====  le 3e, en fonction du choix du 2e  =====-->
+
+
+      <!--=========  div écran d'accueil  )======--> 
+
+         <div id="option0" style="display: block;">
+            <h3>Choisir une option</h3>
+         </div>
+
+      <!--=============== Choix 1 ==============-->
+
+         <div id="option1" style="display: none;">
+            <h3>Liste de vos contacts</h3>
+
+            <ul>
+               <li>nom1_test</li>
+               <li>num1_test</li>
+            </ul>
+
+            <ul>
+               <li>nom2_test</li>
+               <li>num2_test</li>
+            </ul>
+
+            <ul>
+               <li>nom3_test</li>
+               <li>num3_test</li>
+            </ul>
+         </div>
+
+      <!--=============== Choix 2 ==============-->
+
+         <div id="option2"  style="display: none;">
+            <form action="" method="get">
+               <label for="GET-name">Entrez son nom :</label>
+               <input type="text" name="name" id="GET-name">
             
-              <select name="destination">
+               <label for="GET-firstname">Entrez son prénom :</label>
+               <input type="text" name="firstname" id="GET-firstname">
+               <label for="GET-firstname">Entrez son numéro :</label>
+               <input type="text" name="phone_number" id="GET-phone_number">
+               <input type="submit" value="Valider">                  
+            </form>
+         </div>
 
-              <option value="">Que voulez vous faire ?</option>
-      
-              <option value="">Voir nombre contacts</option>
+      <!--================ Choix 3 ==============-->
 
-              <option value="">Listez contacts</option>
+         <div id="option3" style="display: none;">
+            <p>Vous avez <span></span>contacts</p>
+         </div>
 
-              <option value="">Ajoutez contacts</option>
 
-              </select>
-
-          </div>
-
-          <div id="contenu"></div>
-
-        </div>
       </div>
-    </body>
+
+      <script src="assets/js/script.js"></script>
+
+   </body>
 
 </html>
