--- a/version Javascript/index.html
+++ b/version Javascript/index.html
@@ -12,15 +12,12 @@
 
 <!--================   3 morceaux  ==============-->
 
-
       <!--===================  le 1er  ==================-->  
          <div id="enTete">
             <h1>Gestionnaire de contacts</h1>
             <img src="assets/img/avatar.png" alt="avatar" />
          </div>
       <!--===============================================-->
-
-
 
 
       <!--======================  le 2e  ====================-->
@@ -35,18 +32,13 @@
       <!--===================================================-->
 
 
-
-
       <!--=======  le 3e, en fonction du choix du 2e  =======-->
 
-
-         <!--===== div écran d'accueil  Choix 0 ====--> 
+         <!--===== Choix 0 div écran d'accueil ====--> 
          <div id="option0" style="display: block;">
             <h3>Choisir une option</h3>
          </div>
          <!--=======================================-->
-
-
 
          <!--=============== Choix 1 ===============-->
          <div id="option1" style="display: none;">
@@ -66,8 +58,6 @@
          </div>
          <!--======================================-->
 
-
-
          <!--=============== Choix 2 ==============-->
          <div id="option2"  style="display: none;">
             <form action="" method="get">
@@ -82,13 +72,13 @@
          </div>
          <!--=======================================-->
 
-
-
          <!--================ Choix 3 ==============-->
          <div id="option3" style="display: none;">
             <p>Vous avez <span></span>contacts</p>
          </div>
          <!--=======================================-->
+
+      <!--==============  Clôture 3e morceau  ========================-->
 
       </div>
 
