--- a/version Javascript/index.html
+++ b/version Javascript/index.html
@@ -44,15 +44,15 @@
          <div id="option1" style="display: none;">
             <h3>Liste de vos contacts</h3>
             <ul>
-               <li>nom1_test</li>
+               <li>name1_test + firstname1_test</li>
                <li>num1_test</li>
             </ul>
             <ul>
-               <li>nom2_test</li>
+               <li>name2_test + firstname2_test</li>
                <li>num2_test</li>
             </ul>
             <ul>
-               <li>nom3_test</li>
+               <li>name3_test + firstname3_test</li>
                <li>num3_test</li>
             </ul>
          </div>
