--- a/version Javascript/index.html
+++ b/version Javascript/index.html
@@ -74,7 +74,7 @@
 
          <!--================ Choix 3 ==============-->
          <div id="option3" style="display: none;">
-            <p>Vous avez <span></span>contacts</p>
+            <p>Vous avez <span id="nbtotal"></span> contacts</p>
          </div>
          <!--=======================================-->
 
