--- a/version Javascript/index.html
+++ b/version Javascript/index.html
@@ -44,8 +44,8 @@
          <div id="option1" style="display: none;">
             <h3>Liste de vos contacts</h3>
             <ul>
-               <li>name1_test + firstname1_test</li>
-               <li>num1_test</li>
+               <li id="nom_prenom"></li>
+               <li id ="numtel"></li>
             </ul>
             <ul>
                <li>name2_test + firstname2_test</li>
@@ -61,13 +61,13 @@
          <!--=============== Choix 2 ==============-->
          <div id="option2"  style="display: none;">
             <form action="" method="get" onsubmit="return false">
-               <label for="GET-name">Entrez son nom :</label>
-               <input type="text" name="name" id="GET-name" onblur="verifNom(this)">
-               <label for="GET-firstname">Entrez son prénom :</label>
-               <input type="text" name="firstname" id="GET-firstname" onblur="verifPrenom(this)">
-               <label for="GET-firstname">Entrez son numéro :</label>
-               <input type="text" name="phone_number" id="GET-phone_number" onblur="verifNum(this)">
-               <input type="submit" value="Valider">
+               <label for="get_name">Entrez son nom :</label>
+               <input type="text" name="name" id="get_name">
+               <label for="get_firstname">Entrez son prénom :</label>
+               <input type="text" name="firstname" id="get_firstname">
+               <label for="get_firstname">Entrez son numéro :</label>
+               <input type="text" name="phone_number" id="get_phone_number">
+               <input type="submit" id="button" value="Valider">
             </form>
          </div>
          <!--=======================================-->
