--- a/version Javascript/index.html
+++ b/version Javascript/index.html
@@ -14,8 +14,17 @@
 
       <!--_______le 1er_______-->
          <div id="enTete">
-            <h1>Gestionnaire de contacts</h1>
-            <img src="assets/img/avatar.png" alt="avatar" />
+           <svg viewBox="0 0 500 150">
+              <path id="curve" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
+              <text width="500">
+                <textPath xlink:href="#curve" >
+                  Gestionnaire de contacts
+                </textPath>
+              </text>
+            </svg>
+            <h1>Gestionnaire </Br>de contacts</h1>
+
+            <img src="assets/img/furax.png" alt="avatar" />
          </div>
 
 
